# Django_DRF_Core

./: .editorconfig  .flake8  .pre-commit-config.yaml  Makefile  README.md  TODO.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
core/core/utils/: collections.py  misc.py  settings.py
core/project/: urls.py
core/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
scripts/: production_data.py
